# finance-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: envelope-budgeting-design.md  roadmap.md
docs/architecture/: INVARIANTS.md
docs/design/: webui-date-navigation.md
scripts/: dev-web.sh
src/finance_mcp/: __init__.py  __main__.py  allocation.py  archive.py  budget_config.py  burndown.py  categories.py  cli.py  client.py  config.py  forecast.py  importer.py  matching.py  normalize.py  queries.py  reconcile.py  redflags.py  schedule.py  server.py  store.py  subscription.py  sync.py  typemap.py  webui.py
tests/: conftest.py  test_allocation.py  test_archive.py  test_budget_config.py  test_burndown.py  test_categories.py  test_cli_surfaces.py  test_client.py  test_forecast.py  test_importer.py  test_matching.py  test_normalize.py  test_queries.py  test_reconcile.py  test_redflags.py  test_schedule.py  test_server.py  test_store.py  test_subscription.py  test_sync.py  test_typemap.py  test_webui.py  test_webui_design_guards.py
tests/fixtures/: sample_accounts.json
