[project]
name = "finance-mcp"
version = "0.1.0"
description = "SimpleFIN-backed transaction access for Copilot via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dfrysinger" }]
keywords = ["mcp", "copilot", "simplefin", "finance", "transactions"]
dependencies = [
    "mcp>=1.28.0",
]

[project.scripts]
finance-mcp = "finance_mcp.cli:main"
finance-mcp-server = "finance_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
